# My_Learning_Substrate

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  polkadot_vs_eosio_vs_evm.xlsx  qa.xlsx  rust-toolchain.toml  substrate_eosio_evm.md
ask!/: README.md
frame-pallet/: README.md
frame-pallet/pallet-notes/: README.md  TEMPLATE.md  pallet-assets.md  pallet-balances.md  pallet-bank.drawio  pallet-bank.md  pallet-democracy.md  pallet-dpos.drawio  pallet-identity&nicks.md  pallet-nicks.md  pallet-timestamp.md  pallet-transaction-payment.md  pallet-xcm.md
frame-pallet/pallet-timestamp/: README.md
frame-pallet/recipes/: hooks.rs
img/: node-dpos.drawio  substrate_learning.drawio
ink/: README.md
ink!/: README.md  standards.md
ink!/counter/: README.md
ink!/flipper/: README.md
ink!/incrementer/: Cargo.toml  lib.rs
ink!/token/: lib.rs
ink!/utils/: README.md
ink/counter/: Cargo.toml  lib.rs
ink/token/: Cargo.toml  lib.rs
libs/subwasm/: README.md
pallet/: README.md
pallet/pallet-timestamp/: README.md
pallet/recipes/: config.rs
recipes/api/: get_metadata.rs
recipes/code/: Cargo.toml
recipes/essentials/: README.md  stf.md
recipes/runtime/: arithmetic_calc.rs  config_constants.rs  convert_balance_u32.rs  create_pallet_type_aliases.rs  debug.rs  helper_fn.rs  helper_get_free_reserve_total_bal.rs  ocw_3_unsigned_w_signed_payload_tx.md  ocw_node.md  traits_associated_types_common.rs  zero_trait.rs
recipes/test/: check_account_if_reaped.rs  debug.rs
scaffoldings/runtime/: construct_runtime.rs  (+13 more)
sdk/: README.md
substrate/: README.md
substrate-node/: README.md  node-eosio.md  offchain-worker.md
tools/substrate-api-client/: Cargo.toml  README.md
tools/subxt/demo/: Cargo.toml
tools/subxt/demo/examples/: transfer_coin.rs
tools/subxt/demo/src/: main.rs
tuts/: Cargo.toml  README.md
tuts/examples/: bounded_vec.rs
(+76 files in other folders)
