[package]
name = "subxt-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
# subxt = "0.43.0"
# subxt-signer = "0.43.0"
subxt = {git = "https://github.com/paritytech/subxt.git", package = "subxt"}
subxt-signer = {git = "https://github.com/paritytech/subxt.git", package = "subxt-signer"}
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
